src/components/Categories/categories.css
/* .card-hoverImg {
  display: block;
  width: 100%;
  height: 250px;
} */

.image-overlay {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background: rgb(0 0 0 / 60%);
  display: flex;
  flex-direction: column;
  justify-content: center;
  text-align: center;
  opacity: 0;
  transition: opacity 0.5s;
}

.image-overlay:hover {
  opacity: 1;
}

.card-hovertext {
  font-size: 3rem;
  font-weight: bold;
  color: #dcdcdc;
}

/* no bigger than 1024 px */
@media screen and (max-width: 1024px) {
  .image-overlay {
    opacity: 1;
    background: rgb(0 0 0 / 40%);
  }
}

/* no bigger than 400px  */
@media screen and (max-width: 400px) {
  h3.card-hovertext {
    font-size: calc(2.25rem - 0.75vw);
  }
}

